--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -180,6 +180,13 @@
     margin-top: 4rem
 }
 
+// Align all three columns to the top on desktop
+@media (min-width:768px) {
+    .info-column:not(:first-child) {
+        margin-top: 0;
+    }
+}
+
 @media (max-width:1280px) {
     .info-column {
         flex-direction: column;
